# HackerRank-DataStructuresInHaskell

./: DataStructures.cabal  README.md  stack.yaml
Arrays/: Arrays.cabal
Arrays/2DArrayDS/: Main.hs  Tests.hs
Arrays/ArrayManipulation/: Main.hs  Tests.hs
Arrays/ArraysDS/: Main.hs  Tests.hs
Arrays/DynamicArray/: Main.hs  Tests.hs
Arrays/LeftRotation/: Main.hs  Tests.hs
Arrays/SparseArrays/: Main.hs  Tests.hs
Stacks/: Stacks.cabal
Stacks/BalancedBrackets/: Main.hs  Tests.hs
Stacks/MaximumElement/: Main.hs  Tests.hs
Test/: Test-Utils.cabal  Utils.hs
Trees/: Trees.cabal
Trees/SwapNodesAlgo/: Main.hs  Tests.hs
