name:                DataStructures
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ArraysDS
  hs-source-dirs:      Arrays/ArraysDS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      . Arrays/ArraysDS
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring
  default-language:    Haskell2010
  other-modules:       Main Test.Utils
