name:                DataStructures
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ArraysDS
  hs-source-dirs:      Arrays/ArraysDS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array
  default-language:    Haskell2010

test-suite ArraysDSTests
  hs-source-dirs:      . Arrays/ArraysDS
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring
  default-language:    Haskell2010
  other-modules:       Main Test.Utils

executable 2DArrayDS
  hs-source-dirs:      Arrays/2DArrayDS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array
  default-language:    Haskell2010

test-suite 2DArrayDSTests
  hs-source-dirs:      . Arrays/2DArrayDS
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring
  default-language:    Haskell2010
  other-modules:       Main Test.Utils

executable DynamicArray
  hs-source-dirs:      Arrays/DynamicArray
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array,
                       containers
  default-language:    Haskell2010

test-suite DynamicArrayTests
  hs-source-dirs:      . Arrays/DynamicArray
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring,
                       containers
  default-language:    Haskell2010
  other-modules:       Main Test.Utils

executable LeftRotation
  hs-source-dirs:      Arrays/LeftRotation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array,
                       containers
  default-language:    Haskell2010

test-suite LeftRotationTests
  hs-source-dirs:      . Arrays/LeftRotation
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring,
                       containers
  default-language:    Haskell2010
  other-modules:       Main Test.Utils

executable SparseArrays
  hs-source-dirs:      Arrays/SparseArrays
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array,
                       containers,
                       mtl
  default-language:    Haskell2010

test-suite SparseArraysTests
  hs-source-dirs:      . Arrays/SparseArrays
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring,
                       containers,
                       mtl
  default-language:    Haskell2010
  other-modules:       Main Test.Utils

executable ArrayManipulation
  hs-source-dirs:      Arrays/ArrayManipulation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base,
                       array,
                       containers,
                       mtl,
                       bytestring
  default-language:    Haskell2010

test-suite ArrayManipulationTests
  hs-source-dirs:      . Arrays/ArrayManipulation
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base,
                       array,
                       silently,
                       tasty,
                       tasty-golden,
                       bytestring,
                       containers,
                       mtl
  default-language:    Haskell2010
  other-modules:       Main Test.Utils
