name:                Arrays
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable ArraysDS
  hs-source-dirs:      ArraysDS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array
  default-language:    Haskell2010

test-suite ArraysDSTests
  hs-source-dirs:      ArraysDS
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main

executable 2DArrayDS
  hs-source-dirs:      2DArrayDS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array
  default-language:    Haskell2010

test-suite 2DArrayDSTests
  hs-source-dirs:      2DArrayDS
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main

executable DynamicArray
  hs-source-dirs:      DynamicArray
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array, containers
  default-language:    Haskell2010

test-suite DynamicArrayTests
  hs-source-dirs:      DynamicArray
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array, containers,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main

executable LeftRotation
  hs-source-dirs:      LeftRotation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array
  default-language:    Haskell2010

test-suite LeftRotationTests
  hs-source-dirs:      LeftRotation
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main

executable SparseArrays
  hs-source-dirs:      SparseArrays
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, containers, mtl
  default-language:    Haskell2010

test-suite SparseArraysTests
  hs-source-dirs:      SparseArrays
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, containers, mtl,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main

executable ArrayManipulation
  hs-source-dirs:      ArrayManipulation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array, bytestring
  default-language:    Haskell2010

test-suite ArrayManipulationTests
  hs-source-dirs:      ArrayManipulation
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array, bytestring,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main
