name:                Stacks
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable MaximumElement
  hs-source-dirs:      MaximumElement
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, array
  default-language:    Haskell2010

test-suite MaximumElementTests
  hs-source-dirs:      MaximumElement
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, array,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main
