name:                Test-Utils
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      ..
  exposed-modules:     Test.Utils
  build-depends:       base,
                       tasty,
                       tasty-golden,
                       silently
  default-language:    Haskell2010
