name:                Trees
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable SwapNodesAlgo
  hs-source-dirs:      SwapNodesAlgo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base, containers
  default-language:    Haskell2010

test-suite SwapNodesAlgoTests
  hs-source-dirs:      SwapNodesAlgo
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -main-is Tests
  build-depends:       base, containers,
                       tasty, Test-Utils
  default-language:    Haskell2010
  other-modules:       Main
